--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.1.1</version>
     </dependency>
-
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.0.3</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -78,5 +82,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
